# Project_Interpreter

./: .gitignore  PROJECT_CONSTITUTION.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ROADMAP.md
release-dist/: SHA256SUMS  project_interpreter-0.1.0-py3-none-any.whl
src/project_interpreter/: Project_Interpreter_Dual_Root.code-workspace  __init__.py  analysis_engine.py  app.py  cli.py  config.py  constitution.py  drift.py  ledger.py  materialize.py  model_engine.py  models.py  reports.py
src/project_interpreter/collectors/: __init__.py  mailbox.py  vcs.py
tests/: test_app.py  test_models_ledger.py  test_smoke.py
